{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 489,
  "lineage": "f7b112d1-4921-7f49-8ea9-5f509eb8527f",
  "resources": [
    {
      "module": "module.http-load-balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "euw3-backend",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/zones/europe-west3-b/instanceGroups/backend-instance-group-europe-west3-b",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-04-19T17:16:19.651-07:00",
            "enable_cdn": false,
            "fingerprint": "YPwpaFEyAu0=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/httpHealthChecks/lb-health-check"
            ],
            "id": "projects/technical-practice-2020/global/backendServices/euw3-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "euw3-backend",
            "port_name": "http-port",
            "project": "technical-practice-2020",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/backendServices/euw3-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.instance_template",
            "module.euw3-django-server-instance-template.google_compute_instance_template.default",
            "module.http-load-balancer.google_compute_http_health_check.default",
            "module.instance-group-europe-west3.google_compute_instance_group_manager.default",
            "module.instance-group-us-east1.google_compute_instance_group_manager.default",
            "module.use1-django-server-instance-template.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.euw3_public_subnet",
            "module.vpc.google_compute_subnetwork.use1_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancer",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "use1-backend",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/zones/us-east1-b/instanceGroups/backend-instance-group-us-east1-b",
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-04-19T17:16:19.662-07:00",
            "enable_cdn": false,
            "fingerprint": "ZNivoMnp0bQ=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/httpHealthChecks/lb-health-check"
            ],
            "id": "projects/technical-practice-2020/global/backendServices/use1-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "use1-backend",
            "port_name": "http-port",
            "project": "technical-practice-2020",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/backendServices/use1-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.instance_template",
            "module.euw3-django-server-instance-template.google_compute_instance_template.default",
            "module.http-load-balancer.google_compute_http_health_check.default",
            "module.instance-group-europe-west3.google_compute_instance_group_manager.default",
            "module.instance-group-us-east1.google_compute_instance_group_manager.default",
            "module.use1-django-server-instance-template.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.euw3_public_subnet",
            "module.vpc.google_compute_subnetwork.use1_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-19T17:15:31.298-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/technical-practice-2020/global/firewalls/team-15-fw-allow-http",
            "name": "team-15-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "priority": 1000,
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/firewalls/team-15-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-19T17:15:31.232-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/technical-practice-2020/global/firewalls/team-15-fw-allow-https",
            "name": "team-15-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "priority": 1000,
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/firewalls/team-15-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-04-19T17:15:31.291-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/technical-practice-2020/global/firewalls/team-15-fw-allow-internal",
            "name": "team-15-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "priority": 1000,
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/firewalls/team-15-fw-allow-internal",
            "source_ranges": [
              "10.26.1.0/24",
              "10.26.2.0/24",
              "10.26.3.0/24",
              "10.26.4.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-19T17:15:31.304-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/technical-practice-2020/global/firewalls/team-15-fw-allow-ssh",
            "name": "team-15-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "priority": 1000,
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/firewalls/team-15-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancer",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "balancer-address",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.107.200.154",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-19T17:15:19.156-07:00",
            "id": "projects/technical-practice-2020/global/addresses/global-external-lb-ip",
            "name": "global-external-lb-ip",
            "prefix_length": 0,
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/addresses/global-external-lb-ip"
          }
        }
      ]
    },
    {
      "module": "module.http-load-balancer",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/technical-practice-2020/global/forwardingRules/global-rule",
            "ip_address": "34.107.200.154",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "global-rule",
            "port_range": "80-80",
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/forwardingRules/global-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/targetHttpProxies/test-proxy"
          },
          "dependencies": [
            "google_compute_http_health_check.instance_template",
            "module.euw3-django-server-instance-template.google_compute_instance_template.default",
            "module.http-load-balancer.google_compute_backend_service.euw3-backend",
            "module.http-load-balancer.google_compute_backend_service.use1-backend",
            "module.http-load-balancer.google_compute_global_address.balancer-address",
            "module.http-load-balancer.google_compute_http_health_check.default",
            "module.http-load-balancer.google_compute_target_http_proxy.default",
            "module.http-load-balancer.google_compute_url_map.default",
            "module.instance-group-europe-west3.google_compute_instance_group_manager.default",
            "module.instance-group-us-east1.google_compute_instance_group_manager.default",
            "module.use1-django-server-instance-template.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.euw3_public_subnet",
            "module.vpc.google_compute_subnetwork.use1_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.mysql",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200403",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/zones/europe-west3-b/disks/euw3-mysql-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/technical-practice-2020/zones/europe-west3-b/instances/euw3-mysql-instance-1",
            "instance_id": "6527524206650939220",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "7PTWz5-ct_4=",
            "metadata_startup_script": "yum -y update; yum -y install nginx;export HOSTNAME=$(hostname | tr -d '\n');export PRIVATE_IP=$(curl -sf -H 'Metadata-Flavor:Google' http://metadata/computeMetadata/v1/instance/network-interfaces/0/ip | tr -d '\n');echo \"Welcome to $HOSTNAME - $PRIVATE_IP\" \u003e /usr/share/nginx/www/index.html;service nginx start",
            "name": "euw3-mysql-instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.136.1",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
                "network_ip": "10.26.2.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/regions/europe-west3/subnetworks/team-15-dev-europe-west3-pub-net",
                "subnetwork_project": "technical-practice-2020"
              }
            ],
            "project": "technical-practice-2020",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/zones/europe-west3-b/instances/euw3-mysql-instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.euw3_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.CD",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200403",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/zones/us-east1-b/disks/use1-cd-instance-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/technical-practice-2020/zones/us-east1-b/instances/use1-cd-instance-1",
            "instance_id": "9162131371642148703",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "7PTWz5-ct_4=",
            "metadata_startup_script": "yum -y update; yum -y install nginx;export HOSTNAME=$(hostname | tr -d '\n');export PRIVATE_IP=$(curl -sf -H 'Metadata-Flavor:Google' http://metadata/computeMetadata/v1/instance/network-interfaces/0/ip | tr -d '\n');echo \"Welcome to $HOSTNAME - $PRIVATE_IP\" \u003e /usr/share/nginx/www/index.html;service nginx start",
            "name": "use1-cd-instance-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.74.63.171",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
                "network_ip": "10.26.4.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/regions/us-east1/subnetworks/team-15-dev-us-east1-pub-net",
                "subnetwork_project": "technical-practice-2020"
              }
            ],
            "project": "technical-practice-2020",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/zones/us-east1-b/instances/use1-cd-instance-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.use1_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "name": "team-15-dev-vpc",
            "project": "technical-practice-2020",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "euw3_private_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-19T17:15:31.392-07:00",
            "gateway_address": "10.26.1.1",
            "id": "projects/technical-practice-2020/regions/europe-west3/subnetworks/team-15-dev-europe-west3-pri-net",
            "ip_cidr_range": "10.26.1.0/24",
            "name": "team-15-dev-europe-west3-pri-net",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "private_ip_google_access": false,
            "project": "technical-practice-2020",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/regions/europe-west3/subnetworks/team-15-dev-europe-west3-pri-net"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "euw3_public_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-19T17:15:31.436-07:00",
            "gateway_address": "10.26.2.1",
            "id": "projects/technical-practice-2020/regions/europe-west3/subnetworks/team-15-dev-europe-west3-pub-net",
            "ip_cidr_range": "10.26.2.0/24",
            "name": "team-15-dev-europe-west3-pub-net",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "private_ip_google_access": false,
            "project": "technical-practice-2020",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/regions/europe-west3/subnetworks/team-15-dev-europe-west3-pub-net"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "use1_private_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-19T17:15:31.452-07:00",
            "gateway_address": "10.26.3.1",
            "id": "projects/technical-practice-2020/regions/us-east1/subnetworks/team-15-dev-us-east1-pri-net",
            "ip_cidr_range": "10.26.3.0/24",
            "name": "team-15-dev-us-east1-pri-net",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "private_ip_google_access": false,
            "project": "technical-practice-2020",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/regions/us-east1/subnetworks/team-15-dev-us-east1-pri-net"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "use1_public_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-19T17:15:31.381-07:00",
            "gateway_address": "10.26.4.1",
            "id": "projects/technical-practice-2020/regions/us-east1/subnetworks/team-15-dev-us-east1-pub-net",
            "ip_cidr_range": "10.26.4.0/24",
            "name": "team-15-dev-us-east1-pub-net",
            "network": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/networks/team-15-dev-vpc",
            "private_ip_google_access": false,
            "project": "technical-practice-2020",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/regions/us-east1/subnetworks/team-15-dev-us-east1-pub-net"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancer",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-19T17:16:43.752-07:00",
            "id": "projects/technical-practice-2020/global/targetHttpProxies/test-proxy",
            "name": "test-proxy",
            "project": "technical-practice-2020",
            "proxy_id": 117727864642688772,
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/targetHttpProxies/test-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_http_health_check.instance_template",
            "module.euw3-django-server-instance-template.google_compute_instance_template.default",
            "module.http-load-balancer.google_compute_backend_service.euw3-backend",
            "module.http-load-balancer.google_compute_backend_service.use1-backend",
            "module.http-load-balancer.google_compute_http_health_check.default",
            "module.http-load-balancer.google_compute_url_map.default",
            "module.instance-group-europe-west3.google_compute_instance_group_manager.default",
            "module.instance-group-us-east1.google_compute_instance_group_manager.default",
            "module.use1-django-server-instance-template.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.euw3_public_subnet",
            "module.vpc.google_compute_subnetwork.use1_public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http-load-balancer",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-19T17:16:31.744-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/backendServices/use1-backend",
            "description": "url-mapping for forwarding http to different regions",
            "fingerprint": "9m8yUkmTtl8=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/technical-practice-2020/global/urlMaps/url-map",
            "map_id": 7105989712249182000,
            "name": "url-map",
            "path_matcher": [
              {
                "default_service": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/backendServices/use1-backend",
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/south-carolina/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/backendServices/use1-backend",
                    "url_redirect": []
                  },
                  {
                    "paths": [
                      "/frankfurt/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/backendServices/euw3-backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "technical-practice-2020",
            "self_link": "https://www.googleapis.com/compute/v1/projects/technical-practice-2020/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_http_health_check.instance_template",
            "module.euw3-django-server-instance-template.google_compute_instance_template.default",
            "module.http-load-balancer.google_compute_backend_service.euw3-backend",
            "module.http-load-balancer.google_compute_backend_service.use1-backend",
            "module.http-load-balancer.google_compute_http_health_check.default",
            "module.instance-group-europe-west3.google_compute_instance_group_manager.default",
            "module.instance-group-us-east1.google_compute_instance_group_manager.default",
            "module.use1-django-server-instance-template.google_compute_instance_template.default",
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_subnetwork.euw3_public_subnet",
            "module.vpc.google_compute_subnetwork.use1_public_subnet"
          ]
        }
      ]
    }
  ]
}